[package]
name = "watchttp"
version = "0.1.0"
authors = ["n8ta <n8@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
ureq = "2.1"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.10"